<resources>
    <string name="app_name">Bezat Retailer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="redeem">Redeem</string>
    <string name="password">Enter Password*</string>
    <string name="user_name">UserName</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="my_scan_history">My Scan History</string>
    <string name="about_bezat">About Bezat</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Sign out</string>
    <string name="push_notification">Push Notification</string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="dob">Date Of Birth</string>
    <string name="fav_offers">Favorite Offers</string>
    <string name="prizes">Prizes</string>
    <string name="total_coupon">Total Coupons</string>
    <string name="partners">Partners</string>
    <string name="winners">Winners</string>
    <string name="sign_out">Sign Out</string>
    <string name="vip_offers">VIP Offers</string>
    <string name="my_profile">My Profile</string>
    <string name="packages">Packages</string>
    <string name="redeem_offer">Redeem</string>
    <string name="save">SAVE</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="someting_wrong">Something, went wrong!</string>
    <string name="ok">OK</string>
    <string name="phone">Phone</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="empty_email">Please enter Email</string>
    <string name="empty_name">Please enter Name</string>
    <string name="empty_password">Please enter Password</string>
    <string name="empty_confirm_password">Please enter confirm password</string>
    <string name="password_mismatch">Password and Confirm Password not match</string>
    <string name="empty_dob">Please enter Date of Birth</string>
    <string name="empty_phone">Please enter Phone Number</string>
    <string name="invalid_phone">Please enter valid phone number</string>
    <string name="empty_gender">Please enter Gender</string>
    <string name="empty_country">Please enter country</string>
    <string name="loading">loading...</string>
    <string name="reg_success">Registration Successful</string>
    <string name="title_activity_main_home_activty">MainHomeActivty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_coupon">Get Coupon</string>
    <string name="partner_name">Partner Name :</string>
    <string name="winner_name">Winner Name :</string>
    <string name="prize">Prize :</string>
    <string name="date">Date :</string>
    <string name="favourite_offer">Favourite Offer</string>
    <string name="bezat_winner">Bezat Winner</string>
    <string name="phone_number">Phone Number*</string>
    <string name="code">Code</string>
    <string name="send">Send</string>
    <string name="please_enter_your_register_phone_number_below_we_will_send_a_code_to_reset_your_password">Please Enter
		your register Phone Number below. We will send a code to reset your password
	</string>
    <string name="my_favourite">My Favourite</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="twitter">TWITTER</string>
    <string name="bezat_raffle_is_a_product_of_bezat_and_conducts_monthly_raffles_apple_is_not_involved_in_anyway_with_the_sweepstake_and_not_a_sponsor_of_this_application">
		BEZAT raffle is a product of BEZAT and conducts monthly raffles. Google is not involved in anyway with the sweepstake and not a sponsor of this application
	</string>
    <string name="customer_qr_code">Customer QR Code</string>
    <string name="customer_id">Customer ID</string>
    <string name="bill_no">Bill no :</string>
    <string name="store">Store</string>
    <string name="offers">Offers</string>
    <string name="logout_confirm">Are you sure, you want to SignOut?</string>
    <string name="select_language">Select Language</string>
    <string name="please_enter_the_otp_we_have_sent_to_your_registered_phone_number">Please enter the OTP we have sent
		to your registered Phone Number
	</string>
    <string name="otp">OTP</string>
    <string name="resend">RESEND</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="scan_coupon">Scan Coupon</string>
    <string name="vip_customers">VIP Customers</string>
    <string name="no_result_found">No Result Found</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="email_phone">Email,Phone</string>
    <string name="customer_name">Customer Name :</string>
    <string name="customer_code">Customer Code </string>
    <string name="customer_email">Customer Email :</string>
    <string name="customer_phone">Customer Mobile Number</string>
    <string name="add_vip">Add VIP</string>
    <string name="view_all_offers">View all offers</string>
    <string name="bezat_raffles">Bezat Raffles</string>
    <string name="other_raffles">Other Raffles</string>
    <string name="prize_details">Prize Details</string>
    <string name="reports">Reports</string>
    <string name="add_offer">Add Offer</string>
    <string name="purchase">Purchase</string>
    <string name="offerc">Offer:</string>
    <string name="offer_detail">Offer Detail</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="send_contact_us">SEND</string>
    <string name="get_name">NAME:</string>
    <string name="get_email">EMAIL:</string>
    <string name="get_comments">COMMENTS:</string>
    <string name="user_name_Login">Email / Phone number</string>
    <string name="are_you_sure_logout">Are you sure, you want to LOGOUT?</string>
    <string name="name_vip">Name :</string>
    <string name="code_vip">Code :</string>
    <string name="email_vip">Email :</string>
    <string name="phone_vip">Phone:</string>
    <string name="vip_lists_vip">VIP Lists</string>
    <string name="bezat_yearly">Bezat Yearly</string>
    <string name="bezat_monthly">Bezat Monthly</string>
    <string name="prize_prizes_section">Prize :</string>
    <string name="prize_details_prizes_section">Prize Details</string>
    <string name="raffle_draw_announce_tomorrow">RAFFLE DRAW ANNOUNCE TOMORROW</string>
    <string name="raffle_draw_announce_today">RAFFLE DRAW ANNOUNCE TODAY</string>
    <string name="raffle_held">RAFFLE HELD</string>
    <string name="days_before">DAYS BEFORE</string>
    <string name="raffle_draw_in">RAFFLE DRAW IN</string>
    <string name="days_prizes">DAYS</string>
    <string name="no_vip_list_found">No Vip List found</string>
    <string name="no_coupons_available">No Coupons Available</string>
    <string name="available_tickets">Available tickets</string>
    <string name="no_offer_found">No Offer found</string>
    <string name="offer_price">Offer price</string>
    <string name="original_prize_bd">Original Price:BD</string>
    <string name="BD_offers">BD</string>
    <string name="feedback">Feedback</string>
    <string name="search_by_retailer">Search by Retailer</string>
    <string name="get_feedback">Feedback</string>
    <string name="know">Click for more details</string>
    <string name="code_signup">Code*</string>
    <string name="please_enter_code">Please enter Code</string>
    <string name="please_enter_phone_number">Please enter Phone Number</string>
    <string name="please_enter_password">Please Enter Password*</string>
    <string name="enter_password">Enter Password*</string>
    <string name="please_enter_confirm_password">Please enter Confirm Password</string>
    <string name="passwords_dont_match">Password and Confirm Password does not match</string>
    <string name="change_password_label">Change Password</string>
    <string name="enter_code_customer_code">Enter Phone Number or Customer Code</string>


    <string name="search_by_retailer_name_caps"><font size="15">SEARCH BY RETAILER NAME</font></string>

    <string name="change_language_cap">CHANGE LANGUAGE</string>

    <string name="phone_login">Email / Phone Number</string>
    <string name="password_login">Password</string>

    <string name="email_phone_vip">Email, Phone</string>

    <string name="redeem_button">Redeem</string>


</resources>
