<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            app:showAsAction="always"
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/title_dashboard"/>
    <item
            app:showAsAction="always"
            android:id="@+id/navigation_bell"
            android:icon="@drawable/bell"
            android:title="@string/title_notifications"/>

    <item
            app:showAsAction="always"
            android:id="@+id/navigation_profile"
            android:icon="@drawable/profile"
            android:title="@string/title_profile"/>
    <item
            app:showAsAction="always"
            android:id="@+id/navigation_settings"
            android:icon="@drawable/settings"
            android:title="@string/title_settings"/>

</menu>
