<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools">
    <TextView
            android:id="@+id/topImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="@dimen/default_size"
            android:scaleType="fitCenter"/>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/topImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    >
        <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"

            >
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/field"
                        android:id="@+id/etName"
                        android:hint="@string/name"
                        android:textColor="@android:color/black"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary">
                >
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/field"
                        android:hint="@string/email"
                        android:id="@+id/etEmail"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/black"
                />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColorHint="@color/colorPrimary"
                        android:hint="@string/country"
                        android:layout_weight="1"
                >

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/country"
                            style="@style/field"
                            android:layout_marginEnd="2dp"
                            android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary"
                >

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone"
                            style="@style/field"
                            android:hint="@string/phone"
                            android:layout_marginStart="2dp"
                            android:inputType="phone"
                            android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/field"
                        android:hint="@string/gender"
                        android:id="@+id/etGender"
                        android:textColor="@android:color/black"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/field"
                        android:hint="@string/dob"
                        android:id="@+id/etDOB"
                        android:textColor="@android:color/black"
                />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/field"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:id="@+id/etPassword"
                        android:textColor="@android:color/black"
                />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/field"
                        android:id="@+id/etConfirmPassword"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/black"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:text="@string/save"
                    android:id="@+id/save"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/muli_bold"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/colorPrimary"
            />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>