<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
            android:id="@+id/topImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/title_settings"
            android:gravity="center"
            android:textSize="@dimen/default_size"
            android:scaleType="fitCenter"/>
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topImage"
            android:id="@+id/rvSettings">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:padding="@dimen/_5sdp"
            android:orientation="vertical"

            >
        <TextView
                android:id="@+id/txtMyScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/my_scan_history"
                android:visibility="gone"
                android:textColor="@color/black"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:visibility="gone"
                android:background="@color/colorPrimary"/>
        <TextView
                android:visibility="gone"
                android:id="@+id/txtMyFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/my_favourite"
                android:textColor="@color/black"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                    android:visibility="gone"
                android:background="@color/colorPrimary"/>
        <TextView
                android:id="@+id/txtAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/about_bezat"
                android:textColor="@color/black"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorPrimary"/>
        <TextView
                android:id="@+id/txtTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/terms_conditions"
                android:textColor="@color/black"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorPrimary"/>
        <TextView
                android:id="@+id/txtPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorPrimary"/>
        <TextView
                android:id="@+id/txtContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/contact_us"
                android:textColor="@color/black"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorPrimary"/>
        <TextView
                android:id="@+id/txtFaq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/faq"
                android:textColor="@color/black"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorPrimary"/>
        <TextView
                android:id="@+id/txtChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/change_password"
                android:textColor="@color/black"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorPrimary"/>

        <TextView
                android:id="@+id/txtChangeLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/change_language"
                android:textColor="@color/black"/>
        <LinearLayout
                android:id="@+id/layoutLanguage"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical">
            <ImageButton
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_16sdp"

                    android:scaleType="fitXY"
                    android:background="@drawable/shape_bg_outgoing_bubble"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:backgroundTint="@color/white"

                    android:orientation="vertical"
                    android:background="@drawable/ripple_primary_white">

                <TextView
                        android:id="@+id/txtEnglish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="English"
                        android:padding="@dimen/_12sdp"
                        android:textColor="@color/black"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/cardview_shadow_start_color"/>
                <TextView
                        android:id="@+id/txtArabic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="عربى"
                        android:gravity="end"
                        android:padding="@dimen/_12sdp"
                        android:textColor="@color/black"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/cardview_shadow_start_color"/>
            </LinearLayout>

        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorPrimary"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">
            <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/push_notification"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/muli_semibold"
                    android:textColor="@color/black"/>

            <Switch
                    android:id="@+id/switches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/green"
                    android:trackTint="@color/divider_grey"
                    />

        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorPrimary"/>

        <TextView
                android:id="@+id/txtLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/logout"
                android:textColor="@color/black"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorPrimary"/>

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>