<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity"
        android:background="@color/colorPrimary"
>
    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/topImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/app_logo"

            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tilEmail"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tilPassword"
            android:layout_margin="@dimen/default_margin"
            android:id="@+id/tilEmail"
            android:hint="@string/user_name"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:drawablePadding="@dimen/default_margin"
                android:drawableStart="@drawable/ic_user_name"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/txtForgot"
            android:layout_margin="@dimen/default_margin"
            android:id="@+id/tilPassword"
            android:hint="@string/password"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:drawableStart="@drawable/ic_password"
                android:inputType="textPassword"
                android:drawablePadding="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintBottom_toTopOf="@id/btnLogin"
              android:layout_margin="@dimen/default_margin"
              android:visibility="invisible"
              android:text="@string/forgot_password"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:textSize="@dimen/default_size"
              android:padding="@dimen/default_margin"
              android:id="@+id/txtForgot"/>
    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tvSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:text="@string/login"

            android:textColor="@color/colorPrimary"
            android:background="@drawable/bg_login"
            android:textAllCaps="false"
            android:id="@+id/btnLogin"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_margin="@dimen/default_margin"
              android:text="@string/sign_up"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:textSize="@dimen/default_size"
              android:visibility="invisible"
              android:padding="@dimen/default_margin"
              android:id="@+id/tvSignUp"/>

</androidx.constraintlayout.widget.ConstraintLayout>